--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <!-- <div>{{ appState$ | async | json }}</div> -->
+
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 <div class="container-xl">
     <div class="table-responsive">
         <div class="table-wrapper">
@@ -8,16 +13,15 @@
                         <h2>Manage Servers</h2>
                     </div>
                     <div class="col-sm-6">
-                       <!-- <button (click)="printReport()" type="button" class="btn btn-primary">Print Report</button>
-  
+                        <button type="button" class="btn btn-primary">Print Report</button>
+
                         <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal">
                             <i class="material-icons">&#xE147;</i>
                             <span>New Server</span>
                         </a>
-  
+
                         <span>
-                            <select (ngModelChange)="filterServers($event)" name="status" ngModel="ALL"  
-                                class="btn btn-info" style="height: 32.91px;">
+                            <select name="status" class="btn btn-info" style="height: 32.91px;">
                                 <option value="ALL">ALL</option>
                                 <option value="SERVER_UP">SERVER UP</option>
                                 <option value="SERVER_DOWN">SERVER DOWN</option>
@@ -46,51 +50,47 @@
                                 <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody *ngFor="let server of appState.appData.data.servers; let i = index" >
+                        <tbody>
                             <tr>
-                                <td> <img [src]="server.imageUrl" [alt]="server.name" width="40" height="40"></td>
-                                <td>{{ server.ipAddress }}</td>
-                                <td>{{ server.name }}</td>
-                                <td>{{ server.memory }}</td>
-                                <td>{{ server.type }}</td>
+                                <td> <img [src]="" [alt]="" width="40" height="40"></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td>
-                                    <span class="badge" 
-                                    [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : ' badge-danger']">
-                                      {{ server.status === Status.SERVER_UP ? 'SERVER UP' : 'SERVER DOWN' }}
-                                    </span>
+                                    <span class="badge"></span>
                                 </td>
                                 <td>
-                                    <a (click)="pingServer(server.ipAddress)" style="cursor: pointer;">
-                                        <i *ngIf="(filterStatus$ | async) === '' || (filterStatus$ | async) !== server.ipAddress"
-                                            class="material-icons" title="Ping server">&#xe328;</i>
-                                        <i *ngIf="(filterStatus$ | async) === server.ipAddress"
-                                            class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+                                    <a style="cursor: pointer;">
+                                        <i class="material-icons" title="Ping server">&#xe328;</i>
+                                        <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
                                     </a>
                                 </td>
                                 <td>
-                                    <a (click)="deleteServer(server)" class="delete" data-toggle="modal"
-                                        style="cursor: pointer;"><i class="material-icons" data-toggle="tooltip"
-                                            title="Delete">&#xE872;</i></a>
+                                    <a class="delete" data-toggle="modal" style="cursor: pointer;"><i
+                                            class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                                 </td>
                         </tbody>
                     </table>
                 </ng-container>
+                <ng-container *ngSwitchCase="DataState.LOADED_STATE">
+                </ng-container>
                 <ng-container *ngSwitchCase="DataState.ERROR_STATE">
                     <div class="alert-danger">
-                        {{ appState.error }}
+                        error
                     </div>
                 </ng-container>
             </ng-container>
         </div>
     </div>
-  </div>-->
-  
-  
-  <!-- Add server Modal HTML 
-  <div id="addEmployeeModal" class="modal fade">
+</div>
+
+
+<!-- Add server Modal HTML -->
+<div id="addEmployeeModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form #serverForm="ngForm" (ngSubmit)="saveServer(serverForm)">
+            <form #serverForm="ngForm">
                 <div class="modal-header">
                     <h4 class="modal-title">Add Server</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -130,15 +130,13 @@
                     <button type="button" class="btn btn-warning" id="closeModal" data-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="submit" [disabled]="serverForm.invalid || (isLoading$ | async)"
-                        class="btn btn-success">
-                        <i *ngIf="isLoading$ | async" class="fas fa-spinner fa-spin"></i>
-                       <span *ngIf="isLoading$ | async">Saving...</span>
-                        <span *ngIf="!(isLoading$ | async)">Add</span>
+                    <button type="submit" class="btn btn-success">
+                        <i class="fas fa-spinner fa-spin"></i>
+                        <span>Saving...</span>
+                        <span>Add</span>
                     </button>
                 </div>
             </form>
         </div>
     </div>
-  </div>
-   <notifier-container></notifier-container> -->
+</div>
