--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,15 +50,18 @@
                                 <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody *ngFor="let server of appState.appData.data.servers; let i = index">z
                             <tr>
-                                <td> <img [src]="" [alt]="" width="40" height="40"></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td> <img [src]="server.imageUrl" [alt]="server.name" width="40" height="40"></td>
+                                <td>{{ server.ipAddress }}</td>
+                                <td>{{ server.name }}</td>
+                                <td>{{ server.memory }}</td>
+                                <td>{{ server.type }}</td>
                                 <td>
-                                    <span class="badge"></span>
+                                    <span class="badge"
+                                    [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : ' bagde-danger' ]">
+                                        {{server.status  === Status.SERVER_UP ? 'SERVER UP ' : ' SERVER DOWN'}}
+                                    </span>
                                 </td>
                                 <td>
                                     <a style="cursor: pointer;">
