--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
                                 <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody *ngFor="let server of appState.appData.data.servers; let i = index">z
+                        <tbody *ngFor="let server of appState.appData.data.servers; let i = index" >
                             <tr>
                                 <td> <img [src]="server.imageUrl" [alt]="server.name" width="40" height="40"></td>
                                 <td>{{ server.ipAddress }}</td>
@@ -59,14 +59,16 @@
                                 <td>{{ server.type }}</td>
                                 <td>
                                     <span class="badge"
-                                    [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : ' bagde-danger' ]">
-                                        {{server.status  === Status.SERVER_UP ? 'SERVER UP ' : ' SERVER DOWN'}}
+                                    [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : ' badge-danger']">
+                                    {{ server.status === Status.SERVER_UP ? 'SERVER UP' : 'SERVER DOWN' }}
                                     </span>
                                 </td>
                                 <td>
                                     <a style="cursor: pointer;">
-                                        <i class="material-icons" title="Ping server">&#xe328;</i>
-                                        <i class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+                                        <i *ngIf="(filterStatus$ | async ) === '' || (filterStatus$ | async) !== server.ipAddress" 
+                                        class="material-icons" title="Ping server">&#xe328;</i>
+                                        <i *ngIf="(filterStatus$ | async) !== server.ipAddress"
+                                        class="fa fa-spinner fa-spin" style="font-size:24px"></i>
                                     </a>
                                 </td>
                                 <td>
@@ -80,7 +82,7 @@
                 </ng-container>
                 <ng-container *ngSwitchCase="DataState.ERROR_STATE">
                     <div class="alert-danger">
-                        error
+                        {{ appState.error }}
                     </div>
                 </ng-container>
             </ng-container>
