- Corrected a "WARNING/ERROR in budgets, maximum exceeded for initial" in Angular.json file - Added the ping functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,16 +59,16 @@
                                 <td>{{ server.type }}</td>
                                 <td>
                                     <span class="badge"
-                                    [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : ' badge-danger']">
-                                    {{ server.status === Status.SERVER_UP ? 'SERVER UP' : 'SERVER DOWN' }}
+                                        [ngClass]="[server.status === Status.SERVER_UP ? ' badge-success' : ' badge-danger']">
+                                        {{ server.status === Status.SERVER_UP ? 'SERVER UP' : 'SERVER DOWN' }}
                                     </span>
                                 </td>
                                 <td>
-                                    <a style="cursor: pointer;">
-                                        <i *ngIf="(filterStatus$ | async ) === '' || (filterStatus$ | async) !== server.ipAddress" 
-                                        class="material-icons" title="Ping server">&#xe328;</i>
+                                    <a (click) = "pingServer(server.ipAddress)" style="cursor: pointer;">
+                                        <i *ngIf="(filterStatus$ | async ) === '' || (filterStatus$ | async) !== server.ipAddress"
+                                            class="material-icons" title="Ping server">&#xe328;</i>
                                         <i *ngIf="(filterStatus$ | async) !== server.ipAddress"
-                                        class="fa fa-spinner fa-spin" style="font-size:24px"></i>
+                                            class="fa fa-spinner fa-spin" style="font-size:24px"></i>
                                     </a>
                                 </td>
                                 <td>
@@ -89,7 +89,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- Add server Modal HTML -->
 <div id="addEmployeeModal" class="modal fade">
