--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,8 @@
                         </a>
 
                         <span>
-                            <select name="status" class="btn btn-info" style="height: 32.91px;">
+                            <select (ngModelChange)="filterServers($event)" ngModel="ALL" name="status"
+                                class="btn btn-info" style="height: 32.91px;">
                                 <option value="ALL">ALL</option>
                                 <option value="SERVER_UP">SERVER UP</option>
                                 <option value="SERVER_DOWN">SERVER DOWN</option>
@@ -50,7 +51,7 @@
                                 <th>Actions</th>
                             </tr>
                         </thead>
-                        <tbody *ngFor="let server of appState.appData.data.servers; let i = index" >
+                        <tbody *ngFor="let server of appState.appData.data.servers; let i = index">
                             <tr>
                                 <td> <img [src]="server.imageUrl" [alt]="server.name" width="40" height="40"></td>
                                 <td>{{ server.ipAddress }}</td>
@@ -64,7 +65,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    <a (click) = "pingServer(server.ipAddress)" style="cursor: pointer;">
+                                    <a (click)="pingServer(server.ipAddress)" style="cursor: pointer;">
                                         <i *ngIf="(filterStatus$ | async ) === '' || (filterStatus$ | async) !== server.ipAddress"
                                             class="material-icons" title="Ping server">&#xe328;</i>
                                         <i *ngIf="(filterStatus$ | async) !== server.ipAddress"
@@ -94,7 +95,7 @@
 <div id="addEmployeeModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form #serverForm="ngForm">
+            <form #serverForm="ngForm" (ngSubmit)="saveServer(serverForm)">
                 <div class="modal-header">
                     <h4 class="modal-title">Add Server</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -134,10 +135,11 @@
                     <button type="button" class="btn btn-warning" id="closeModal" data-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="submit" class="btn btn-success">
-                        <i class="fas fa-spinner fa-spin"></i>
-                        <span>Saving...</span>
-                        <span>Add</span>
+                    <button type="submit" [disabled]="serverForm.invalid || (isLoading$ | async)"
+                        class="btn btn-success">
+                        <i *ngIf="isLoading$ | async" class="fas fa-spinner fa-spin"></i>
+                        <span *ngIf="isLoading$ | async">Saving...</span>
+                        <span *ngIf="!(isLoading$ | async)">Add</span>
                     </button>
                 </div>
             </form>
